--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "15.3.3",
