--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,10 @@ jobs:
         run: pnpm run build
         env:
           CI: true
-
+          
+      - name: Verify build output
+        run: ls -la ./out && echo "Build output verified"
+          
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
